[package]
name = "fstart-driver-pci-ecam"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
## Use x86 CF8/CFC I/O ports to program the host bridge's PCIEXBAR
## register, enabling ECAM before the first MMIO config access.
pio = ["dep:fstart-pio"]

[dependencies]
fstart-mmio = { workspace = true }
fstart-pio = { workspace = true, optional = true }
fstart-services = { workspace = true }
fstart-log = { workspace = true }
ufmt = { workspace = true }
serde = { workspace = true }
