[package]
name = "fstart-driver-pl011"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
acpi = ["dep:fstart-acpi", "dep:fstart-acpi-macros"]

[dependencies]
fstart-mmio = { workspace = true }
fstart-services = { workspace = true }
heapless = { workspace = true }
tock-registers = { workspace = true }
serde = { workspace = true }
fstart-acpi = { workspace = true, optional = true }
fstart-acpi-macros = { path = "../fstart-acpi-macros", optional = true }
