[package]
name = "fstart-driver-q35-hostbridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fstart-arch-x86 = { workspace = true }
fstart-driver-pci-ecam = { workspace = true }
fstart-pio = { workspace = true }
fstart-services = { workspace = true }
fstart-log = { workspace = true }
fstart-mp = { workspace = true }
fstart-pmio-ich = { workspace = true }
fstart-smm = { workspace = true }
ufmt = { workspace = true }
serde = { workspace = true }
