[package]
name = "fstart-driver-qemu-fw-cfg"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fstart-log = { workspace = true }
fstart-pio = { workspace = true }
fstart-services = { workspace = true }
serde = { workspace = true }
ufmt = { workspace = true }
