[package]
name = "fstart-driver-sunxi-d1-ccu"
description = "Allwinner D1/T113 (sun20i) Clock Control Unit driver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fstart-arch = { workspace = true, features = ["riscv64"] }
fstart-sunxi-ccu-regs = { workspace = true }
fstart-mmio = { workspace = true }
fstart-services = { workspace = true }
tock-registers = { workspace = true }
serde = { workspace = true }
