[package]
name = "fstart-driver-sunxi-h3-mmc"
description = "Allwinner H3/H2+ (sun8i) SD/MMC host controller driver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fstart-arch = { workspace = true, features = ["armv7"] }
fstart-sunxi-ccu-regs = { workspace = true }
fstart-mmio = { workspace = true }
fstart-services = { workspace = true }
fstart-log = { workspace = true }
ufmt = { workspace = true }
tock-registers = { workspace = true }
serde = { workspace = true }
